routes/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: default
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
  hostnames:
    - "api.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      # filters:
      # - type: ExtensionRef
      #   extensionRef:
      #     group: gateway.solo.io
      #     kind: RouteOption
      #     name: world-cities
      backendRefs:
      - name: world-cities-soap-service
        namespace: default
        port: 8080
